--- a/package.json
+++ b/package.json
@@ -22,7 +22,12 @@
   "dependencies": {
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
+    "@types/cookie-parser": "^1.4.3",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.3",
+    "mongoose": "^7.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
