--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MONGO_URL = mongodb+srv://oleg_admin:123MuETV1qr@cluster0.tz7rbfv.mongodb.net/bloggers-local?retryWrites=true&w=majority
+MONGO_URL = mongodb+srv://oleg_admin:123MuETV1qr@cluster0.tz7rbfv.mongodb.net/bloggers?retryWrites=true&w=majority
 JWT_SECRET =  12345
+PORT = 3000
