--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
     "@types/cookie-parser": "^1.4.3",
+    "@types/mongodb": "^4.0.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
+    "mongodb": "^5.1.0",
     "mongoose": "^7.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
