--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^10.0.2",
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/serve-static": "^3.0.1",
@@ -34,6 +35,8 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/date-fns": "^2.6.0",
     "@types/mongodb": "^4.0.7",
+    "@types/mongoose": "^5.11.97",
+    "@types/passport-jwt": "^3.0.8",
     "add": "^2.0.6",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
@@ -44,6 +47,7 @@
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.0",
     "nodemailer": "^6.9.1",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "uuidv4": "^6.2.13",
