--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/date-fns": "^2.6.0",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/mongodb": "^4.0.7",
     "@types/mongoose": "^5.11.97",
     "@types/passport-jwt": "^3.0.8",
@@ -44,6 +45,7 @@
     "cookie-parser": "^1.4.6",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.0",
     "nodemailer": "^6.9.1",
