--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "mongoose": "^7.0.0",
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
+    "passport-http": "^0.3.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
