--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "dotenv": "^16.0.3",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.1.0",
+    "mongodb-memory-server": "^8.12.0",
     "mongoose": "^7.0.0",
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
@@ -90,7 +91,7 @@
       "ts"
     ],
     "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
+    "testRegex": ".*(-|.)spec.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
