--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "mongodb": "^5.1.0",
     "mongodb-memory-server": "^8.12.0",
     "mongoose": "^7.0.0",
+    "mysql2": "^3.2.0",
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
     "passport-http": "^0.3.0",
@@ -59,6 +60,7 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "typeorm": "^0.3.12",
     "uuidv4": "^6.2.13",
     "yarn": "^1.22.19"
   },
