--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "jsonwebtoken": "^9.0.0",
+    "localtunnel": "^2.0.2",
     "lodash": "^4.17.21",
     "mongodb": "^5.1.0",
     "mongodb-memory-server": "^8.12.0",
